FIX 회원가입 오류 수정 중

--- a/src/main/resources/templates/MyPage/signup.html
+++ b/src/main/resources/templates/MyPage/signup.html
@@ -71,7 +71,7 @@
                                             <div class="profile-user position-relative d-inline-block mx-auto  mb-3">
                                                 <img alt="user-profile-image"
                                                      class="rounded-circle avatar-xl img-thumbnail user-profile-image"
-                                                     id="profileURLInput" src="/assets/images/users/user-dummy-img.jpg">
+                                                     id="profileURL" src="/assets/images/users/user-dummy-img.jpg">
                                                 <div class="avatar-xs p-0 rounded-circle profile-photo-edit">
                                                     <input class="profile-img-file-input" id="profile-img-file-input"
                                                            name="profileURL" type="hidden">
@@ -260,7 +260,7 @@
                                             </p>
                                         </div>
                                         <div class="mt-4">
-                                            <button class="btn btn-success w-100" type="submit">Sign Up</button>
+                                            <button class="btn btn-success w-100" type="submit" id="save">Sign Up</button>
                                         </div>
                                     </div>
                                 </form>
