--- a/src/main/resources/templates/MyPage/profile-settings.html
+++ b/src/main/resources/templates/MyPage/profile-settings.html
@@ -38,7 +38,7 @@
                             <div class="profile-user position-relative d-inline-block mx-auto  mb-3">
                                 <img th:src="${session.user.profileURL}"
                                      class="rounded-circle avatar-xl img-thumbnail user-profile-image"
-                                     alt="user-profile-image" id="profileURLInput">
+                                     alt="user-profile-image" id="profileURL">
                                 <div class="avatar-xs p-0 rounded-circle profile-photo-edit">
                                     <input id="profile-img-file-input" type="hidden"
                                            class="profile-img-file-input" name="profileURL">
